[gd_scene load_steps=17 format=2]

[ext_resource path="res://assets/temp_assets/Aa4diZG.jpg" type="Texture" id=1]
[ext_resource path="res://assets/temp_assets/temp_icons/pistol_icon.png" type="Texture" id=2]
[ext_resource path="res://assets/temp_assets/temp_icons/shotgun_icon.png" type="Texture" id=3]
[ext_resource path="res://assets/temp_assets/temp_icons/machine_gun_icon.png" type="Texture" id=4]
[ext_resource path="res://assets/temp_assets/temp_icons/fists_icon.png" type="Texture" id=5]
[ext_resource path="res://assets/temp_assets/temp_icons/rocket_launcher_icon.png" type="Texture" id=6]
[ext_resource path="res://assets/temp_assets/leechmouth_1.png" type="Texture" id=7]
[ext_resource path="res://assets/temp_assets/leechmouth_2.png" type="Texture" id=8]
[ext_resource path="res://scenes/UI/gameplay_UI/pause_menu.gd" type="Script" id=9]
[ext_resource path="res://scenes/UI/main_menu/options.tscn" type="PackedScene" id=10]
[ext_resource path="res://scenes/UI/gameplay_UI/win_screen.gd" type="Script" id=11]
[ext_resource path="res://scenes/UI/gameplay_UI/gameplay_UI.gd" type="Script" id=12]

[sub_resource type="Animation" id=2]
resource_name = "pickup_popup_fade"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("pickup_popup:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 1.1, 2 ),
"transitions": PoolRealArray( 2.07054, 1, 1, 2.07054 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="InputEventAction" id=4]
action = "pause"

[sub_resource type="ShortCut" id=5]
shortcut = SubResource( 4 )

[sub_resource type="AnimatedTexture" id=3]
frames = 2
fps = 1.0
frame_0/texture = ExtResource( 7 )
frame_1/texture = ExtResource( 8 )
frame_1/delay_sec = 0.0

[node name="gameplay_UI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 12 )

[node name="pickup_popup" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_top = 0.039
anchor_right = 1.0
anchor_bottom = 0.078
margin_top = -0.0600014
margin_bottom = -0.120003
text = "You just picked up pistol ammo"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -1.0
margin_top = -1.0
margin_right = 1.0
margin_bottom = 1.0
rect_min_size = Vector2( 2, 2 )
color = Color( 0, 0, 0, 1 )

[node name="blood_holder" type="Control" parent="."]
unique_name_in_owner = true
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Panel" type="Panel" parent="."]
anchor_top = 0.897
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 0.0799866
margin_right = 6.10352e-05
margin_bottom = 1.0
rect_min_size = Vector2( 720, 37.5 )

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/HBoxContainer"]
margin_right = 70.0
margin_bottom = 56.0
rect_min_size = Vector2( 70, 0 )

[node name="health_amount" type="Label" parent="Panel/HBoxContainer/VBoxContainer"]
margin_right = 70.0
margin_bottom = 14.0
text = "100"

[node name="Label" type="Label" parent="Panel/HBoxContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 70.0
margin_bottom = 32.0
text = "Health"

[node name="VBoxContainer2" type="VBoxContainer" parent="Panel/HBoxContainer"]
margin_left = 74.0
margin_right = 179.0
margin_bottom = 56.0
rect_min_size = Vector2( 70, 0 )

[node name="ammo_amount" type="Label" parent="Panel/HBoxContainer/VBoxContainer2"]
margin_right = 105.0
margin_bottom = 14.0
text = "Infinite"

[node name="ammo_type" type="Label" parent="Panel/HBoxContainer/VBoxContainer2"]
margin_top = 18.0
margin_right = 105.0
margin_bottom = 32.0
rect_min_size = Vector2( 105, 14 )
text = "Fists"

[node name="Label" type="Label" parent="Panel/HBoxContainer/VBoxContainer2"]
margin_top = 36.0
margin_right = 105.0
margin_bottom = 50.0
text = "Ammo"

[node name="MarginContainer" type="MarginContainer" parent="Panel/HBoxContainer"]
margin_left = 183.0
margin_right = 283.0
margin_bottom = 56.0
rect_min_size = Vector2( 100, 0 )

[node name="CenterContainer" type="CenterContainer" parent="Panel/HBoxContainer"]
margin_left = 287.0
margin_right = 587.0
margin_bottom = 56.0
rect_min_size = Vector2( 300, 56 )

[node name="weapon_logos" type="HBoxContainer" parent="Panel/HBoxContainer/CenterContainer"]
margin_left = 42.0
margin_top = 8.0
margin_right = 258.0
margin_bottom = 48.0
rect_min_size = Vector2( 210, 40 )

[node name="Icon_background" type="ColorRect" parent="Panel/HBoxContainer/CenterContainer/weapon_logos" groups=["icon_background"]]
self_modulate = Color( 0, 1, 0.27451, 1 )
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 0 )
color = Color( 0.243137, 0.243137, 0.243137, 1 )

[node name="fist_icon" type="TextureRect" parent="Panel/HBoxContainer/CenterContainer/weapon_logos/Icon_background"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 5 )
expand = true

[node name="Icon_background2" type="ColorRect" parent="Panel/HBoxContainer/CenterContainer/weapon_logos" groups=["icon_background"]]
margin_left = 44.0
margin_right = 84.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 0 )
color = Color( 0.243137, 0.243137, 0.243137, 1 )

[node name="pistol_icon" type="TextureRect" parent="Panel/HBoxContainer/CenterContainer/weapon_logos/Icon_background2"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true

[node name="Icon_background3" type="ColorRect" parent="Panel/HBoxContainer/CenterContainer/weapon_logos" groups=["icon_background"]]
margin_left = 88.0
margin_right = 128.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 0 )
color = Color( 0.243137, 0.243137, 0.243137, 1 )

[node name="shotgun_icon" type="TextureRect" parent="Panel/HBoxContainer/CenterContainer/weapon_logos/Icon_background3"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
expand = true

[node name="Icon_background4" type="ColorRect" parent="Panel/HBoxContainer/CenterContainer/weapon_logos" groups=["icon_background"]]
margin_left = 132.0
margin_right = 172.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 0 )
color = Color( 0.243137, 0.243137, 0.243137, 1 )

[node name="machine_gun_icon" type="TextureRect" parent="Panel/HBoxContainer/CenterContainer/weapon_logos/Icon_background4"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 4 )
expand = true

[node name="Icon_background5" type="ColorRect" parent="Panel/HBoxContainer/CenterContainer/weapon_logos" groups=["icon_background"]]
margin_left = 176.0
margin_right = 216.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 0 )
color = Color( 0.243137, 0.243137, 0.243137, 1 )

[node name="rocket_launcher_icon" type="TextureRect" parent="Panel/HBoxContainer/CenterContainer/weapon_logos/Icon_background5"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 6 )
expand = true

[node name="CenterContainer2" type="CenterContainer" parent="Panel/HBoxContainer"]
margin_left = 591.0
margin_right = 689.0
margin_bottom = 56.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/HBoxContainer/CenterContainer2"]
margin_top = 4.0
margin_right = 98.0
margin_bottom = 52.0

[node name="Label" type="Label" parent="Panel/HBoxContainer/CenterContainer2/VBoxContainer"]
margin_right = 98.0
margin_bottom = 14.0
text = "Keys"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/HBoxContainer/CenterContainer2/VBoxContainer"]
margin_top = 18.0
margin_right = 98.0
margin_bottom = 48.0

[node name="red_key" type="ColorRect" parent="Panel/HBoxContainer/CenterContainer2/VBoxContainer/HBoxContainer" groups=["key_icon"]]
margin_right = 30.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
color = Color( 0.145098, 0.145098, 0.164706, 1 )

[node name="blue_key" type="ColorRect" parent="Panel/HBoxContainer/CenterContainer2/VBoxContainer/HBoxContainer" groups=["key_icon"]]
margin_left = 34.0
margin_right = 64.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
color = Color( 0.145098, 0.145098, 0.164706, 1 )

[node name="yellow_key" type="ColorRect" parent="Panel/HBoxContainer/CenterContainer2/VBoxContainer/HBoxContainer" groups=["key_icon"]]
margin_left = 68.0
margin_right = 98.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
color = Color( 0.145098, 0.145098, 0.164706, 1 )

[node name="MarginContainer2" type="MarginContainer" parent="Panel/HBoxContainer"]
margin_left = 693.0
margin_right = 768.0
margin_bottom = 56.0
rect_min_size = Vector2( 75, 0 )

[node name="large_weapon_picture" type="ColorRect" parent="Panel/HBoxContainer"]
margin_left = 772.0
margin_right = 872.0
margin_bottom = 56.0
rect_min_size = Vector2( 100, 0 )
color = Color( 0.968627, 0.0823529, 0.0823529, 1 )

[node name="TextureRect" type="TextureRect" parent="Panel/HBoxContainer"]
margin_left = 876.0
margin_right = 936.0
margin_bottom = 56.0
rect_min_size = Vector2( 60, 56 )
texture = ExtResource( 1 )
expand = true

[node name="UI_animation" type="AnimationPlayer" parent="."]
anims/pickup_popup_fade = SubResource( 2 )

[node name="pause_menu" type="ColorRect" parent="." groups=["pause_menu"]]
pause_mode = 2
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -250.0
margin_top = -250.0
margin_right = 250.0
margin_bottom = 250.0
rect_pivot_offset = Vector2( 250, 250 )
color = Color( 0.737255, 0.737255, 0.737255, 1 )
script = ExtResource( 9 )

[node name="ReferenceRect" type="ReferenceRect" parent="pause_menu"]
anchor_right = 1.0
anchor_bottom = 1.0
border_color = Color( 0.462745, 0.462745, 0.462745, 1 )
border_width = 4.8
editor_only = false

[node name="VBoxContainer" type="VBoxContainer" parent="pause_menu"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 500, 500 )

[node name="spacer" type="CenterContainer" parent="pause_menu/VBoxContainer"]
margin_right = 500.0
margin_bottom = 10.0
rect_min_size = Vector2( 500, 10 )

[node name="CenterContainer" type="CenterContainer" parent="pause_menu/VBoxContainer"]
margin_top = 14.0
margin_right = 500.0
margin_bottom = 28.0
rect_min_size = Vector2( 500, 0 )

[node name="Label" type="Label" parent="pause_menu/VBoxContainer/CenterContainer"]
margin_left = 208.0
margin_right = 292.0
margin_bottom = 14.0
text = "PAUSE MENU"

[node name="spacer2" type="CenterContainer" parent="pause_menu/VBoxContainer"]
margin_top = 32.0
margin_right = 500.0
margin_bottom = 57.0
rect_min_size = Vector2( 500, 25 )

[node name="CenterContainer3" type="CenterContainer" parent="pause_menu/VBoxContainer"]
margin_top = 61.0
margin_right = 500.0
margin_bottom = 232.0
rect_min_size = Vector2( 500, 0 )

[node name="VBoxContainer" type="VBoxContainer" parent="pause_menu/VBoxContainer/CenterContainer3"]
margin_left = 150.0
margin_right = 350.0
margin_bottom = 171.0
custom_constants/separation = 13

[node name="CenterContainer" type="CenterContainer" parent="pause_menu/VBoxContainer/CenterContainer3/VBoxContainer"]
margin_right = 200.0
margin_bottom = 45.0

[node name="resume_button" type="Button" parent="pause_menu/VBoxContainer/CenterContainer3/VBoxContainer/CenterContainer"]
margin_right = 200.0
margin_bottom = 45.0
rect_min_size = Vector2( 200, 45 )
shortcut = SubResource( 5 )
text = "RESUME"

[node name="CenterContainer2" type="CenterContainer" parent="pause_menu/VBoxContainer/CenterContainer3/VBoxContainer"]
margin_top = 58.0
margin_right = 200.0
margin_bottom = 108.0

[node name="options_button" type="Button" parent="pause_menu/VBoxContainer/CenterContainer3/VBoxContainer/CenterContainer2"]
margin_right = 200.0
margin_bottom = 50.0
rect_min_size = Vector2( 200, 50 )
text = "OPTIONS"

[node name="CenterContainer3" type="CenterContainer" parent="pause_menu/VBoxContainer/CenterContainer3/VBoxContainer"]
margin_top = 121.0
margin_right = 200.0
margin_bottom = 171.0

[node name="menu_button" type="Button" parent="pause_menu/VBoxContainer/CenterContainer3/VBoxContainer/CenterContainer3"]
margin_right = 200.0
margin_bottom = 50.0
rect_min_size = Vector2( 200, 50 )
text = "MAIN MENU"

[node name="spacer3" type="CenterContainer" parent="pause_menu/VBoxContainer"]
margin_top = 236.0
margin_right = 500.0
margin_bottom = 336.0
rect_min_size = Vector2( 500, 100 )

[node name="TextureRect" type="TextureRect" parent="pause_menu"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -250.0
margin_top = -221.0
margin_right = 250.0
margin_bottom = -57.0
texture = SubResource( 3 )
expand = true
stretch_mode = 6

[node name="win_screen" type="ColorRect" parent="." groups=["win_screen"]]
pause_mode = 2
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -128.0
margin_top = -85.0
margin_right = 127.0
margin_bottom = 85.0
rect_min_size = Vector2( 190, 127 )
rect_pivot_offset = Vector2( 250, 250 )
color = Color( 0.737255, 0.737255, 0.737255, 1 )
script = ExtResource( 11 )

[node name="ReferenceRect" type="ReferenceRect" parent="win_screen"]
anchor_right = 1.0
anchor_bottom = 1.0
border_color = Color( 0.462745, 0.462745, 0.462745, 1 )
border_width = 4.8
editor_only = false

[node name="VBoxContainer" type="VBoxContainer" parent="win_screen"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 190, 0 )

[node name="spacer" type="CenterContainer" parent="win_screen/VBoxContainer"]
margin_right = 255.0
margin_bottom = 10.0
rect_min_size = Vector2( 190, 10 )

[node name="CenterContainer" type="CenterContainer" parent="win_screen/VBoxContainer"]
margin_top = 14.0
margin_right = 255.0
margin_bottom = 28.0
rect_min_size = Vector2( 190, 0 )

[node name="Label" type="Label" parent="win_screen/VBoxContainer/CenterContainer"]
margin_left = 69.0
margin_right = 186.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "LEVEL COMPLETED"

[node name="spacer2" type="CenterContainer" parent="win_screen/VBoxContainer"]
margin_top = 32.0
margin_right = 255.0
margin_bottom = 57.0
rect_min_size = Vector2( 190, 25 )

[node name="CenterContainer3" type="CenterContainer" parent="win_screen/VBoxContainer"]
margin_top = 61.0
margin_right = 255.0
margin_bottom = 111.0
rect_min_size = Vector2( 190, 0 )

[node name="VBoxContainer" type="VBoxContainer" parent="win_screen/VBoxContainer/CenterContainer3"]
margin_left = 27.0
margin_right = 227.0
margin_bottom = 50.0
custom_constants/separation = 13

[node name="CenterContainer3" type="CenterContainer" parent="win_screen/VBoxContainer/CenterContainer3/VBoxContainer"]
margin_right = 200.0
margin_bottom = 50.0

[node name="menu_button" type="Button" parent="win_screen/VBoxContainer/CenterContainer3/VBoxContainer/CenterContainer3"]
margin_right = 200.0
margin_bottom = 50.0
rect_min_size = Vector2( 200, 50 )
text = "MAIN MENU"

[node name="spacer3" type="CenterContainer" parent="win_screen/VBoxContainer"]
margin_top = 115.0
margin_right = 255.0
margin_bottom = 215.0
rect_min_size = Vector2( 190, 100 )

[node name="options" parent="." instance=ExtResource( 10 )]
unique_name_in_owner = true
visible = false

[connection signal="pressed" from="pause_menu/VBoxContainer/CenterContainer3/VBoxContainer/CenterContainer/resume_button" to="pause_menu" method="_on_resume_button_pressed"]
[connection signal="pressed" from="pause_menu/VBoxContainer/CenterContainer3/VBoxContainer/CenterContainer2/options_button" to="pause_menu" method="_on_options_button_pressed"]
[connection signal="pressed" from="pause_menu/VBoxContainer/CenterContainer3/VBoxContainer/CenterContainer3/menu_button" to="pause_menu" method="_on_menu_button_pressed"]
[connection signal="pressed" from="win_screen/VBoxContainer/CenterContainer3/VBoxContainer/CenterContainer3/menu_button" to="win_screen" method="_on_menu_button_pressed"]
